# precision-mouse-filter-exe

./: CMakeLists.txt  CMakePresets.json
github/workflows/: build.yml
include/: ConfigManager.h  MainWindow.h
src/: ConfigManager.cpp  MainWindow.cpp  main.cpp
